--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,85 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Inter", sans-serif;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  margin: 0 auto;
+}
+.nav-container {
+  height: 65px;
+  padding: 0px 37px 0 26px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+  background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
+}
+.nav-left {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5px;
+}
+.nav-right {
+}
+.icon-img {
+  width: 31px;
+  height: 26px;
+}
+.nav-heading {
+  font-family: "Karla", sans-serif;
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: -0.1em;
+  text-align: left;
+}
+.nav-right span {
+  font-family: Inter;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 15px;
+  letter-spacing: 0em;
+  text-align: right;
+}
+.meme-container {
+  display: flex;
+  flex-direction: column;
+  padding: 36px 36px;
+  gap: 17px;
+}
+.input-box {
+  display: flex;
+  justify-content: space-between;
+}
+.input-box input {
+  height: 35px;
+  width: 230px;
+  border-radius: 5px;
+  border: 1px solid #d5d4d8;
+  font-family: "Karla", sans-serif;
+}
+.input-box input::placeholder {
+  text-align: center;
+}
+.submit-btn {
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  font-family: Karla;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19px;
+  letter-spacing: -0.1em;
+  text-align: center;
+  color: #fff;
+  cursor: pointer;
+  background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
 }
